// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/molecules/AddToCartButton default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  background-color: #13bebb;
  padding: 0.9rem 3.7rem;
  border: none;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  cursor: pointer;
  color: #fff;
  width: 100%;
}

.c1:hover {
  background-color: #06a09e;
  color: #fff;
}

.c1:active {
  background-color: #06a09e;
  box-shadow: -3px 3px 14px 0px rgba(129,67,67,0.2);
}

.c1:disabled {
  background-color: #7d7d7d;
}

.c1:disabled,
.c1:disabled:hover {
  cursor: default;
}

.c2 {
  display: inline-block;
  font-size: 1.125rem;
  text-transform: uppercase;
  font-weight: 600;
  line-height: 1.25rem;
}

@media (max-width:540px) {
  .c1 {
    padding: 0.9rem 1rem;
    width: 100%;
  }
}

<div
  className="c0"
>
  <button
    className="c1"
    color="primary"
    data-test="addProductToCartButton"
    disabled={false}
    onClick={[Function]}
    size="md"
  >
    <span
      className="c2"
      size="md"
    >
      Add to basket
    </span>
  </button>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/molecules/AddToCartButton disabled 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  background-color: #13bebb;
  padding: 0.9rem 3.7rem;
  border: none;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  outline: none;
  cursor: pointer;
  color: #fff;
  width: 100%;
}

.c1:hover {
  background-color: #06a09e;
  color: #fff;
}

.c1:active {
  background-color: #06a09e;
  box-shadow: -3px 3px 14px 0px rgba(129,67,67,0.2);
}

.c1:disabled {
  background-color: #7d7d7d;
}

.c1:disabled,
.c1:disabled:hover {
  cursor: default;
}

.c2 {
  display: inline-block;
  font-size: 1.125rem;
  text-transform: uppercase;
  font-weight: 600;
  line-height: 1.25rem;
}

@media (max-width:540px) {
  .c1 {
    padding: 0.9rem 1rem;
    width: 100%;
  }
}

<div
  className="c0"
>
  <button
    className="c1"
    color="primary"
    data-test="addProductToCartButton"
    disabled={true}
    onClick={[Function]}
    size="md"
  >
    <span
      className="c2"
      size="md"
    >
      Add to basket
    </span>
  </button>
  <div
    className="c3"
  />
</div>
`;
